--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,11 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches : [feature/*]
+    branches : ["feature/*"]
+    branches-ignore:
+          ["Branch1"] 
+          
+          
 
 
   # Allows you to run this workflow manually from the Actions tab
