--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches : ["feature/*"]
     branches-ignore:
-          ["Branch1"] 
+          ["feature/mno"]
           
           
 
